# bookstore

./: .bashrc  .swp  Dockerfile  README.md  db.sqlite3  docker-compose.yml  env.dev  pyproject.toml  views.py
.github/: workflow-pr.yml
.github/workflows/: build.yml  github-actions-demo.yml
bookstore/: settings.py  urls.py  views.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/viewsets/: order_viewset.py
product/: __init__.py  admin.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/viewsets/: product_viewset.py
