[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Rafael"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
flake8 = "^7.1.1"
django-debug-toolbar = "^4.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
